# camera

./: .gitignore  CMakeLists.txt  README.md  notes.md  notes.txt
src/: Arducam.c  Arducam.h  Platform.h  bsp_spi.c  bsp_spi.h  main.c  raspberryHal.h
